--- a/package.json
+++ b/package.json
@@ -9,19 +9,40 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.0.2",
+    "@syncfusion/ej2-react-heatmap": "^25.1.35",
+    "ag-charts-react": "^9.2.1",
+    "apexcharts": "^3.48.0",
+    "chart.js": "^4.4.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "d3": "^7.9.0",
+    "jsheatmap": "^1.3.1",
+    "lucide-react": "^0.367.0",
+    "mapbox-gl": "^3.2.0",
+    "maplibre-gl": "^4.1.2",
+    "next": "14.1.4",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
-    "next": "14.1.4"
+    "react-heatmap-grid": "^0.9.0",
+    "react-icons": "^5.0.1",
+    "react-map-gl": "^7.1.7",
+    "react-radio-buttons": "^1.2.2",
+    "recharts": "^2.12.4",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/d3": "^7.4.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.4"
+    "typescript": "^5"
   }
 }
