--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^5.0.1",
     "react-map-gl": "^7.1.7",
     "react-radio-buttons": "^1.2.2",
+    "react-responsive": "^10.0.0",
     "react-windowed-select": "^5.2.0",
     "recharts": "^2.12.4",
     "tailwind-merge": "^2.2.2",
