--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-map-gl": "^7.1.7",
     "react-radio-buttons": "^1.2.2",
     "react-responsive": "^10.0.0",
+    "react-window": "^1.8.10",
     "react-windowed-select": "^5.2.0",
     "recharts": "^2.12.4",
     "tailwind-merge": "^2.2.2",
@@ -40,6 +41,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-window": "^1.8.8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
